--- a/RoadSystems/RoadSystems.vcxproj.filters
+++ b/RoadSystems/RoadSystems.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="ConwaysGameOfLifeMaksiowy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConwayBasedPhysics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UIElements.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ConwaysGameOfLifeMaksiowy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConwayBasedPhysics.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
