--- a/RoadSystems/RoadSystems.vcxproj
+++ b/RoadSystems/RoadSystems.vcxproj
@@ -133,11 +133,14 @@
     <ClCompile Include="ConwaysGameOfLife.cpp" />
     <ClCompile Include="ConwaysGameOfLifeMaksiowy.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="UIElements.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConwaysGameOfLife.h" />
     <ClInclude Include="ConwaysGameOfLifeMaksiowy.h" />
+    <ClInclude Include="FileManager.h" />
+    <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="UIElements.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
