--- a/RoadSystems/RoadSystems.vcxproj
+++ b/RoadSystems/RoadSystems.vcxproj
@@ -136,6 +136,8 @@
     <ClCompile Include="ConwaysGameOfLife.cpp" />
     <ClCompile Include="ConwaysGameOfLifeMaksiowy.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu_Popup.cpp" />
+    <ClCompile Include="Menu_Popup.h" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="UIElements.cpp" />
   </ItemGroup>
