--- a/RoadSystems/RoadSystems.vcxproj
+++ b/RoadSystems/RoadSystems.vcxproj
@@ -135,7 +135,9 @@
   <ItemGroup>
     <ClCompile Include="ConwaysGameOfLife.cpp" />
     <ClCompile Include="ConwaysGameOfLifeMaksiowy.cpp" />
+    <ClCompile Include="EventHandler.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Menu_Popup.cpp" />
     <ClCompile Include="Menu_Popup.h" />
     <ClCompile Include="tinyxml2.cpp" />
@@ -144,7 +146,9 @@
   <ItemGroup>
     <ClInclude Include="ConwaysGameOfLife.h" />
     <ClInclude Include="ConwaysGameOfLifeMaksiowy.h" />
+    <ClInclude Include="EventHandler.h" />
     <ClInclude Include="FileManager.h" />
+    <ClInclude Include="Manager.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="UIElements.h" />
   </ItemGroup>
