--- a/RoadSystems/RoadSystems.vcxproj.filters
+++ b/RoadSystems/RoadSystems.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="EventHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Load_Popup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UIElements.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EventHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Load_Popup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
